# flashcards-tool

./: .gitignore  setup.cfg  setup.py
source/backend/: card.py  db.py
source/frontend/: gui.py
