
[metadata]
name = Flashcards tool
author = Marcello De Giorgi
author_email = degiorgimarcello@gmail.com
description = Tool used to learn and remember new concepts using flashcards
long_description = file: README.md
version = 0.0
url = ...
#keywords =
#license_files = LICENSE.txt

[options]
python_requires = >= 3.7
packages = find:

install_requires=
        pandas >= 1.3.5
        sqlalchemy
        python-dotenv
    

# [options.entry_points]
# console_scripts =
#         flashcards = backend.flash_cli:cli


# [options.packages.find]
# exclude = tests
 
[egg_info]
tag_build = rc

[flake8]
extend-ignore = E203
# See line-length in pyproject.toml.
# NOTE: black sometimes goes a bit over when only a parentesis or a comma is over the limit
max-line-length = 105

# pytest configuration
[tool:pytest]
addopts = --cov=. --cov-report=html --cov-report=term --no-cov-on-fail 

# code coverage configuration
# refer to https://coverage.readthedocs.io/en/latest/config.html
[coverage:run]
branch = true

[coverage:paths]
source = .

[coverage:report]
omit =  **/*_test.py
        **/conftest.py
        **/*_spec.py
        setup.py
        main*

[coverage:html]
directory = coverage
